--- a/ListaUsuariosConectados/Views/UsuariosView.xaml
+++ b/ListaUsuariosConectados/Views/UsuariosView.xaml
@@ -5,10 +5,20 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:ListaUsuariosConectados.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
-    <UniformGrid>
-        <Border Margin="10" BorderThickness="2" BorderBrush="DarkGray" Background="WhiteSmoke">
-            
+             >
+    <WrapPanel>
+        <Border Margin="10" BorderThickness="2" BorderBrush="DarkGray" Background="WhiteSmoke" Width="400" Height="450">
+            <StackPanel>
+                <Border  CornerRadius="100" Height="200" Width="200" BorderThickness="5" BorderBrush="Black">
+                    <Border.Background>
+                        <ImageBrush ImageSource="https://www.webconsultas.com/sites/default/files/styles/wc_adaptive_image__small/public/articulos/perfil-resilencia.jpg"></ImageBrush>
+                    </Border.Background>
+                </Border>
+                <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontWeight="Bold" HorizontalAlignment="Center" FontSize="30">Miguel Angel Delgado Villafan</TextBlock>
+                <TextBlock TextWrapping="Wrap" TextAlignment="Center" HorizontalAlignment="Center" FontSize="25">Front-End Developer</TextBlock>
+                <TextBlock></TextBlock>
+            </StackPanel>
         </Border>
-    </UniformGrid>
+
+    </WrapPanel>
 </UserControl>
