--- a/ListaUsuariosConectados/Views/UsuariosView.xaml
+++ b/ListaUsuariosConectados/Views/UsuariosView.xaml
@@ -7,22 +7,68 @@
              mc:Ignorable="d" 
              >
     <DockPanel>
-        <TextBlock DockPanel.Dock="Bottom" Text="{Binding MisIPs}"></TextBlock>
-        <WrapPanel>
-            <Border Margin="10" BorderThickness="2" BorderBrush="DarkGray" Background="WhiteSmoke" Width="400" Height="450">
-                <StackPanel>
-                    <Border  CornerRadius="100" Height="200" Width="200" BorderThickness="5" BorderBrush="Black">
-                        <Border.Background>
-                            <ImageBrush ImageSource="https://www.webconsultas.com/sites/default/files/styles/wc_adaptive_image__small/public/articulos/perfil-resilencia.jpg"></ImageBrush>
-                        </Border.Background>
-                    </Border>
-                    <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontWeight="Bold" HorizontalAlignment="Center" FontSize="30">Miguel Angel Delgado Villafan</TextBlock>
-                    <TextBlock TextWrapping="Wrap" TextAlignment="Center" HorizontalAlignment="Center" FontSize="25">Front-End Developer</TextBlock>
-                    <TextBlock></TextBlock>
-                </StackPanel>
-            </Border>
+        
+        
+        
+        <Grid DockPanel.Dock="Top" Background="Red">
 
-        </WrapPanel>
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding SoyServidor}" Value="True">
+                            <Setter Property="Visibility" Value="Collapsed"></Setter>
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+            
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="100"></ColumnDefinition>
+                <ColumnDefinition></ColumnDefinition>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition></RowDefinition>
+                <RowDefinition></RowDefinition>
+            </Grid.RowDefinitions>
+
+            <Image Margin="5" Grid.ColumnSpan="2" Source="{Binding Fotofrafia}"></Image>
+            
+            <TextBlock Grid.Column="1"  FontSize="20" Foreground="Blue" TextDecorations="Underline" Text="{Binding Nombre}"></TextBlock>
+            <TextBlock Grid.Column="1" Grid.Row="2" FontSize="20"  Foreground="Blue" TextDecorations="Underline" Text="{Binding Descripcion}"></TextBlock>
+        </Grid>
+        
+        <TextBlock DockPanel.Dock="Bottom" Text="{Binding MisIPs}"></TextBlock>
+
+        
+        
+        <ScrollViewer>
+            <ItemsControl ItemsSource="{Binding Usuarios}">
+                <ItemsControl.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <WrapPanel></WrapPanel>
+                    </ItemsPanelTemplate>
+                </ItemsControl.ItemsPanel>
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Border Margin="10" BorderThickness="2" BorderBrush="DarkGray" Background="WhiteSmoke" Width="170" Height="200">
+                            <StackPanel>
+                                <Border  CornerRadius="100" Height="100" Width="100" BorderThickness="5" BorderBrush="Black">
+                                    <Border.Background>
+                                        <ImageBrush ImageSource="{Binding Fotofrafia}"></ImageBrush>
+                                    </Border.Background>
+                                </Border>
+                                <TextBlock TextWrapping="Wrap" TextAlignment="Center" FontWeight="Bold" HorizontalAlignment="Center" FontSize="30" Text="{Binding Nombre}"></TextBlock>
+                                <TextBlock TextWrapping="Wrap" TextAlignment="Center" HorizontalAlignment="Center" FontSize="25" Text="{Binding Descripcion}"></TextBlock>
+                                <TextBlock></TextBlock>
+                            </StackPanel>
+                        </Border>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </ScrollViewer>
+        
+        
     </DockPanel>
     
 </UserControl>
